--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="rate_us">Rate us</string>
     <string name="refresh">Refresh</string>
     <string name="share_app">Share App</string>
+    <string name="options">Options</string>
+    <string name="play_video">Play Video</string>
+    <string name="rename">Rename</string>
+    <string name="share">Share</string>
 </resources>
